junit fix